change some bad code